
5.1.0 -> 5.2a0:
    - rpm.org: single point to control how callbacks are made.
    - rpm.org: Don't leak memory on python expandMacro().
    - jbj: rpmgpg: stub in gpg options using popt.
    - rpm.org: get/set transaction keyring methods.
    - jbj: rpmio: add rpmkeyring API.
    - rpm.org: swipe the abstract keyring API.
    - jbj: rpmio: add Content-Disposition: handling (for rpmwget eventually).
    - jbj: rpmwget: rework logic to avoid Stat(2) running HEAD.
    - jbj: rpmio: set st_blksize = 2048 iff html with Stat(http://) 
    - jbj: rpmio: add Content-Type/Last-Modified to FD_t.
    - jbj: rpmwget: wire up -i,--input-file URI manifests.
    - jbj: rpmwget: handle lower/UPPER ofn transforms, stub in retry logic.
    - jbj: rpmwget: stub in a minimal (but functional) URI copy.
    - jbj: rpmwget: refactor options into a static structure.
    - jbj: fix: specspo lookup broke because of 2nd tagName call side-effect.
    - jbj: rpmwget: parse all wget options.
    - jbj: rpmio: stub in rpmwget options using popt.
    - jbj: rpmio: stub in rpmcurl options using popt.
    - jbj: rpmio: delete rpmrepo/rpmmtree, they live in tools/ now.
    - jbj: rpmz: fix some typos.
    - jbj: rpmdigest: parse/verify 0install manifest format.
    - jbj: rpmdigest: resurrect rpmdigest -c manifest before attempting
	0install manifest verification.
    - jbj: rpmdigest: add sha256 (and other) digests to 0install manifests.
    - jbj: rpmdigest: achieve "sha1new" 0install manifest spewage for trees.
    - jbj: rpmdigest: generalize to do multi-rooted Fts(3) traversal.
    - jbj: rpmdigest: pull in mtreeCwalk() for 0install dir args tree spewage.
    - jbj: rpmdigest: achieve 0install manifest spewage for file args.
    - jbj: rpmdigest: refactor to prepare for 0install manifest spewage.
    - jbj: rpmrepo: put a --stats stopwatch on the mmap digest cost as well.
    - jbj: rpmrepo: add repoFclose(), accumulate I/O stats into a ts.