@@ -1,5 +1,8 @@
 
 5.1.0 -> 5.2a0:
+    - jbj: rpmdav: run OPTIONS once, repeat for every directory, through a URI.
+    - jbj: rpmdav: add global rpmioHttp{Accept,ReadTimeoutSecs,UserAgent} for now.
+    - jbj: rpmwget: wire up --spider to Stat(2) running HEAD.
     - rpm.org: single point to control how callbacks are made.
     - rpm.org: Don't leak memory on python expandMacro().
     - jbj: rpmgpg: stub in gpg options using popt.
